--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "npx mocha tests/**/*.test.js --exit"
+    "test": "npx mocha tests/**/*.test.js --exit",
+    "eslint": "npx eslint src/** tests/**"
   },
   "repository": {
     "type": "git",
@@ -23,8 +24,9 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "eslint": "^7.8.1",
+    "eslint": "^7.9.0",
     "eslint-plugin-mocha": "^8.0.0",
+    "eslint-plugin-react": "^7.20.6",
     "mocha": "^8.1.3",
     "sinon": "^9.0.3",
     "supertest": "^4.0.2"
